# OpenPACEvolve

./: .gitignore  README.md  openpacevolve-run.py  pyproject.toml
configs/: default_config.yaml
docs/: index.html  styles.css
examples/function_minimization/: README.md  config.yaml  evaluator.py  initial_program.py
pacevolve/: __init__.py  _version.py  api.py  cli.py  config.py  controller.py  database.py  evaluation_result.py  evaluator.py
pacevolve/context/: __init__.py  failure_memory.py  hypothesis.py  idea_pool.py  pruning.py
pacevolve/llm/: __init__.py  base.py  ensemble.py  openai.py
pacevolve/momentum/: __init__.py  backtracking.py  progress.py
pacevolve/prompt/: __init__.py  sampler.py  templates.py
pacevolve/sampling/: __init__.py  action_weights.py  crossover.py
pacevolve/utils/: __init__.py  async_utils.py  code_utils.py
